--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "serve": "^14.2.4",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
