Aumenta limite de memória do Node.js no build para deploy no Render

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--max_old_space_size=1024 react-scripts build",
+    "serve": "serve -s build -l 0.0.0.0:$PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
