--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "dev": "react-scripts start",
     "build": "NODE_OPTIONS=--max_old_space_size=1024 react-scripts build",
+    "build:win": "set NODE_OPTIONS=--max_old_space_size=1024 && react-scripts build",
     "serve": "serve -s build -l 0.0.0.0:$PORT",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
